Fixed page display.
Fixed issue where the page could render not aligned to the top-left corner.

--- a/style.css
+++ b/style.css
@@ -16,3 +16,6 @@ body {
 textarea {
 	border: 0px solid rgba(0, 0, 0, 0);
 }
+#displayArea {
+	overflow: scroll;
+}
